src/db_layer/src/jaldb_context.h

struct jaldb_segment;
struct jaldb_context_t;
/**
* jaldb_context type
*/
typedef struct jaldb_context_t jaldb_context;
/**
* Define bit flags to represent settings for the Berkeley DB
*/
enum jaldb_flags {
	JDB_NONE = 0,
	JDB_READONLY = 1,
	JDB_DB_RECOVER = 2
};
/**
 * Initializes a DB context.
 * @param[in] ctx The context to initialize.
 * @param[in] db_root The root path of the DB Layer's files. If db_root is
 * NULL, then the default is /var/lib/jalop/db.
 * @param[in] jdb_flags Bit-packed options to be passed to the db. Specify zero
 * or more options using a bitwise or "|" with the values specified in the
 * jaldb_flags enum.
 *
 * @return JAL_OK if the function succeeds or a JAL error code if the function
 * fails.
 */
enum jaldb_status jaldb_context_init(
	jaldb_context *ctx,
	const char *db_root,
	enum jaldb_flags jdb_flags);
/**
 * Destroys a DB context.
 * Release all resources associated with this context.
 *
 * @param[in,out] ctx The context to destroy. *ctx will be set to NULL.
 */
void jaldb_context_destroy(jaldb_context **ctx);
/**
 * Retrieves a record by nonce.
 *
 * @param[in] ctx The context.
 * @param[in] type The type of record (journal, audit, log).
 * @param[in] nonce The nonce of the record being retrieved.
 * @param[out] rec This will be filled in as a jaldb_record object if the
 * record is found. Note that any segments located on disk will not be opened
 * automatically.
 *
 * @return JAL_OK if the function succeeds or a JAL error code if the function
 * fails.
 */

enum jaldb_status jaldb_get_record(jaldb_context *ctx,
		enum jaldb_rec_type type,
		char *nonce,
		struct jaldb_record **rec);
/**
 * Finds a given record and marks the sent to 0 or 1 for the remote archive source.
 * Note: Is up to the caller to verify valid states for Confirmed and/or Synced before
 *   calling this function to update the Sent state.
 *
 * @param[in] ctx The context.
 * @param[in] type The type of record (journal, audit, or log).
 * @param[in] nonce The nonce of the record to mark.
 * @param[in] target_state The requested state for the Sent flag.
 *
 * @return JALDB_OK on success, or a different JALDB error code on failure.
 */
enum jaldb_status jaldb_mark_sent(
		jaldb_context *ctx,
		enum jaldb_rec_type type,
		const char *nonce,
		int target_state);
/**
 * Finds a given record and marks it as synced with a remote source.
 *
 * @param[in] ctx The context.
 * @param[in] type The type of record (journal, audit, or log).
 * @param[in] nonce The nonce of the record to mark.
 *
 * @return JALDB_OK on success, or a different JALDB error code on failure.
 */
enum jaldb_status jaldb_mark_synced(
		jaldb_context *ctx,
		enum jaldb_rec_type type,
		const char *nonce);
/**
 * Marks all records in a db that are unsynced as unsent.
 *
 * @param[in] ctx The context.
 * @param[in] type The type of record to mark as unsent.
 *
 * @return JALDB_OK if the function succeeds or an error code.
 */
enum jaldb_status jaldb_mark_unsynced_records_unsent(
	jaldb_context *ctx,
	enum jaldb_rec_type type);
/**
 * Retrieves the next un-synced record from the database.
 *
 * @param[in] ctx The context.
 * @param[in] type The type of record to retrieve.
 * @param[out] nonce The nonce for the returned record.
 * @param[out] rec The record from the DB.
 *
 * @return JALDB_OK if the function succeeds or an error code.
 */
enum jaldb_status jaldb_next_unsynced_record(
	jaldb_context *ctx,
	enum jaldb_rec_type type,
	char **nonce,
	struct jaldb_record **rec);
/**
 * Retrieves the next chronological record from the database.
 *
 * @param[in] ctx The context.
 * @param[in] type The type of record to retrieve.
 * @param[out] nonce The nonce for the returned record.
 * @param[out] rec The record from the DB.
 * @param[in,out] timestamp The timestamp of the last sent record.
 * 		Overwritten to the new timestamp when a record is returned
 * 		Calling with a timestamp less than a previous timestamp
 * 		may result in records being sent multiple times.
 *
 * @return JALDB_OK if the function succeeds or an error code.
 */
enum jaldb_status jaldb_next_chronological_record(
	jaldb_context *ctx,
	enum jaldb_rec_type type,
	char **nonce,
	struct jaldb_record **rec,
	char** timestamp);