src/lmdb_layer/src/jaldb_config.h

/**
 * Enumeration for error codes returned by the get_jaldb_config method.
 */
enum jaldb_config_status {
	JALDB_CONFIG_E_LOAD = 1,
	JALDB_CONFIG_E_NOTFOUND = 2,
	JALDB_CONFIG_E_MEM = 3,
	JALDB_CONFIG_OK = 0,
};
typedef struct jaldb_config_t {
	int map_size;
	char* database_option;
	enum jaldb_flags jdb_flags;
} jaldb_config;
/**
 * Parses the LMDB_CONFIG if present and returns the populated jaldb_config_t struct
 *
 * @param[in] db_root The path to the db root
 * @param[out] jdb_config The pointer to the struct containing the parsed LMDB_CONFIG data.
 *                          This struct is allocated in this method and must be freed when done.
 *
 * @return JALDB_CONFIG_OK if the function succeeds or a jaldb_config_status error code if the function
 * fails.
 */
enum jaldb_config_status get_jaldb_config(const char* db_root, jaldb_config **jdb_config);