src/lmdb_layer/src/jaldb_record.h

struct jaldb_segment;
/**
* Enum used to distinguish between record types
*/
enum jaldb_rec_type {
	JALDB_RTYPE_JOURNAL  = 1 << 0, //!< Indicates a Journal Record */
	JALDB_RTYPE_AUDIT    = 1 << 1, //!< Indicates an Audit Record */
	JALDB_RTYPE_LOG      = 1 << 2, //!< Indicates a Log Record */
	JALDB_RTYPE_UNKNOWN  = 1 << 3, //!< Indicates the record type is unknown/unset */
};
enum jaldb_sync_stat {
	JALDB_NOT_CONFIRMED = 0, // Indicates the record is not completely inserted/received
	JALDB_NOT_SENT = 1,	// Indicates the record has not been sent outbound
	JALDB_SENT = 2,		// Indicates the record has been sent outbound to at least one remote client
	JALDB_SYNCED = 3,	// Indicates the record has been synced by at least one outbound remote client
};
/**
 * This structure is used to insert/retrieve records from the database.
 */
struct jaldb_record {
	char                 *network_nonce;  //!< The nonce used for network communications about this record.
	uint64_t             pid;             //!< The process ID of the process that created the record.
	uint64_t             uid;             //!< The User ID of process that generated the event.
	struct jaldb_segment *sys_meta;       //!< Structure containing data regarding the system metadata, or NULL.
	struct jaldb_segment *app_meta;       //!< Structure containing data regarding the app metadata, or NULL.
	struct jaldb_segment *payload;        //!< Structure containing data regarding the payload (journal audit or log data), or NULL.
	char                 *source;         //!< The source of this record.
	char                 *hostname;       //!< The hostname of the machine that created the record.
	char                 *timestamp;      //!< The timestamp of this record in XML Schema DateTime format.
	char                 *username;       //!< The username of the process that generated the event.
	char                 *sec_lbl;        //!< The security label of the process that generated the event.
	int                  version;         //!< The in-database version of the record, currently always \p 1.
	enum jaldb_rec_type  type;            //!< The type of the record
	enum jaldb_sync_stat synced;          //!< Indicates the outbound record status.
	char                 confirmed;       //!< Indicates whether the inbound record has been confirmed as valid via digest_response from the publisher.
	char                 have_uid;        //!< Indicates if the uid filed is valid.
	uuid_t               host_uuid;       //!< The UUID of the machine that created the record.
	uuid_t               uuid;            //!< The UUID of the record.
};