src/jaldb_inline_filter/sys/src/bindings.rs

extern "C" {
    #[doc = " Initializes a DB context.\n @param[in] ctx The context to initialize.\n @param[in] db_root The root path of the DB Layer's files. If db_root is\n NULL, then the default is /var/lib/jalop/db.\n @param[in] jdb_flags Bit-packed options to be passed to the db. Specify zero\n or more options using a bitwise or \"|\" with the values specified in the\n jaldb_flags enum.\n @param[in] map_size The lmdb map size in gigabytes (GB)\n @return JAL_OK if the function succeeds or a JAL error code if the function\n fails."]
    pub fn jaldb_context_init(
        ctx: *mut jaldb_context,
        db_root: *const ::std::os::raw::c_char,
        jdb_flags: jaldb_flags,
        map_size: ::std::os::raw::c_int,
    ) -> jaldb_status;
}
extern "C" {
    #[doc = " Destroys a DB context.\n Release all resources associated with this context.\n\n @param[in,out] ctx The context to destroy. *ctx will be set to NULL."]
    pub fn jaldb_context_destroy(ctx: *mut *mut jaldb_context);
}
extern "C" {
    #[doc = " Retrieves a record by nonce.\n\n @param[in] ctx The context.\n @param[in] type The type of record (journal, audit, log).\n @param[in] nonce The nonce of the record being retrieved.\n @param[out] rec This will be filled in as a jaldb_record object if the\n record is found. Note that any segments located on disk will not be opened\n automatically.\n\n @return JAL_OK if the function succeeds or a JAL error code if the function\n fails."]
    pub fn jaldb_get_record(
        ctx: *mut jaldb_context,
        type_: jaldb_rec_type,
        nonce: *const ::std::os::raw::c_char,
        rec: *mut *mut jaldb_record,
    ) -> jaldb_status;
}
extern "C" {
    #[doc = " Finds a given record and marks the sent to 0 or 1 for the remote archive source.\n Note: Is up to the caller to verify valid states for Confirmed and/or Synced before\n   calling this function to update the Sent state.\n\n @param[in] ctx The context.\n @param[in] type The type of record (journal, audit, or log).\n @param[in] nonce The nonce of the record to mark.\n @param[in] target_state The requested state for the Sent flag.\n\n @return JALDB_OK on success, or a different JALDB error code on failure."]
    pub fn jaldb_mark_sent(
        ctx: *mut jaldb_context,
        type_: jaldb_rec_type,
        nonce: *const ::std::os::raw::c_char,
        target_state: ::std::os::raw::c_int,
    ) -> jaldb_status;
}
extern "C" {
    #[doc = " Finds a given record and marks it as synced with a remote source.\n\n @param[in] ctx The context.\n @param[in] type The type of record (journal, audit, or log).\n @param[in] nonce The nonce of the record to mark.\n\n @return JALDB_OK on success, or a different JALDB error code on failure."]
    pub fn jaldb_mark_synced(
        ctx: *mut jaldb_context,
        type_: jaldb_rec_type,
        nonce: *const ::std::os::raw::c_char,
    ) -> jaldb_status;
}
extern "C" {
    #[doc = " Marks all records in a db that are unsynced as unsent.\n\n @param[in] ctx The context.\n @param[in] type The type of record to mark as unsent.\n\n @return JALDB_OK if the function succeeds or an error code."]
    pub fn jaldb_mark_unsynced_records_unsent(ctx: *mut jaldb_context, type_: jaldb_rec_type) -> jaldb_status;
}
extern "C" {
    #[doc = " Retrieves the next chronological record from the database.\n\n @param[in] ctx The context.\n @param[in] type The type of record to retrieve.\n @param[out] nonce The nonce for the returned record.\n @param[out] rec The record from the DB.\n @param[in,out] timestamp The timestamp of the last sent record.\n \t\tOverwritten to the new timestamp when a record is returned\n \t\tCalling with a timestamp less than a previous timestamp\n \t\tmay result in records being sent multiple times.\n\n @return JALDB_OK if the function succeeds or an error code."]
    pub fn jaldb_next_chronological_record(
        ctx: *mut jaldb_context,
        type_: jaldb_rec_type,
        nonce: *mut *mut ::std::os::raw::c_char,
        rec: *mut *mut jaldb_record,
        timestamp: *mut *mut ::std::os::raw::c_char,
    ) -> jaldb_status;
}
extern "C" {
    #[doc = " Retrieves the next un-synced record from the database.\n\n @param[in] ctx The context.\n @param[in] type The type of record to retrieve.\n @param[out] network_nonce The nonce for the returned record.\n @param[out] rec_out The record from the DB.\n\n @return JALDB_OK if the function succeeds or an error code."]
    pub fn jaldb_next_unsynced_record(
        ctx: *mut jaldb_context,
        type_: jaldb_rec_type,
        network_nonce: *mut *mut ::std::os::raw::c_char,
        rec_out: *mut *mut jaldb_record,
    ) -> jaldb_status;
}
pub const jaldb_mark_MARK_UNSYNCED_RECORDS_UNSENT: jaldb_mark = 1;
pub const jaldb_mark_MARK_SENT: jaldb_mark = 2;
pub const jaldb_mark_MARK_SYNCED: jaldb_mark = 3;
pub const jaldb_mark_MARK_UNSENT: jaldb_mark = 4;
pub const jaldb_mark_MARK_ERROR: jaldb_mark = -1;
pub const jaldb_mark_MARK_SUCCESS: jaldb_mark = 0;
pub type jaldb_mark = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mark_request {
    pub mark: jaldb_mark,
    pub record_type: jaldb_rec_type,
    pub nonce: [::std::os::raw::c_char; 128usize],
    pub response: jaldb_mark,
}
#[test]
fn bindgen_test_layout_mark_request() {
    const UNINIT: ::std::mem::MaybeUninit<mark_request> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<mark_request>(),
        140usize,
        concat!("Size of: ", stringify!(mark_request))
    );
    assert_eq!(
        ::std::mem::align_of::<mark_request>(),
        4usize,
        concat!("Alignment of ", stringify!(mark_request))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mark) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(mark_request), "::", stringify!(mark))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).record_type) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(mark_request),
            "::",
            stringify!(record_type)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).nonce) as usize - ptr as usize },
        8usize,
        concat!("Offset of field: ", stringify!(mark_request), "::", stringify!(nonce))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).response) as usize - ptr as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(mark_request),
            "::",
            stringify!(response)
        )
    );
}
#[doc = " Structure representing one component of a JALoP record.\n In the database, the record data may be stored in a separate file on disk,\n or directly in the database. If this segment is stored in a separate\n file, then \\p on_disk is set to \\p 1 (otherwise it is \\p 0). If the record\n is on disk, then \\p fd may be a valid file descriptor. If \\p on_disk is\n \\p 1, then payload is set to the relative path on disk.\n If this segment is stored directly in the database, then \\p on_disk is\n set to 0, \\p fd is set to \\p -1, and \\p payload is the\n contents of the segment.\n \\p length is always the size of segment, regardless of whether it is on\n disk or in the database."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jaldb_segment {
    #[doc = "!< The size of this hunk of data."]
    pub length: u64,
    #[doc = "!< The actual data, or the relative path on disk."]
    pub payload: *mut u8,
    #[doc = "!< The file descriptor for the data."]
    pub fd: ::std::os::raw::c_int,
    #[doc = "!< indicates if the payload is the raw content, or if the data exists on disk."]
    pub on_disk: ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_jaldb_segment() {
    const UNINIT: ::std::mem::MaybeUninit<jaldb_segment> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<jaldb_segment>(),
        24usize,
        concat!("Size of: ", stringify!(jaldb_segment))
    );
    assert_eq!(
        ::std::mem::align_of::<jaldb_segment>(),
        8usize,
        concat!("Alignment of ", stringify!(jaldb_segment))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(jaldb_segment), "::", stringify!(length))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).payload) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_segment),
            "::",
            stringify!(payload)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fd) as usize - ptr as usize },
        16usize,
        concat!("Offset of field: ", stringify!(jaldb_segment), "::", stringify!(fd))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).on_disk) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_segment),
            "::",
            stringify!(on_disk)
        )
    );
}
extern "C" {
    #[doc = " Create a timestamp for the Current time in the XML DateTime format which includes\n microseconds.\n\n @return a newly allocated string that contains the current time as an XML\n DateTime string."]
    pub fn jal_gen_timestamp_usec() -> *mut ::std::os::raw::c_char;
}
pub const jaldb_config_status_JALDB_CONFIG_E_LOAD: jaldb_config_status = 1;
pub const jaldb_config_status_JALDB_CONFIG_E_NOTFOUND: jaldb_config_status = 2;
pub const jaldb_config_status_JALDB_CONFIG_E_MEM: jaldb_config_status = 3;
pub const jaldb_config_status_JALDB_CONFIG_OK: jaldb_config_status = 0;
#[doc = " Enumeration for error codes returned by the get_jaldb_config method."]
pub type jaldb_config_status = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jaldb_config_t {
    pub map_size: ::std::os::raw::c_int,
    pub database_option: *mut ::std::os::raw::c_char,
    pub jdb_flags: jaldb_flags,
}
#[test]
fn bindgen_test_layout_jaldb_config_t() {
    const UNINIT: ::std::mem::MaybeUninit<jaldb_config_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<jaldb_config_t>(),
        24usize,
        concat!("Size of: ", stringify!(jaldb_config_t))
    );
    assert_eq!(
        ::std::mem::align_of::<jaldb_config_t>(),
        8usize,
        concat!("Alignment of ", stringify!(jaldb_config_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).map_size) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_config_t),
            "::",
            stringify!(map_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).database_option) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_config_t),
            "::",
            stringify!(database_option)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).jdb_flags) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_config_t),
            "::",
            stringify!(jdb_flags)
        )
    );
}
